# CityDPC

./: .gitignore  CITATION.cff  License.md  README.md  party_walls.py  pyproject.toml  requirements.txt  setup.py
CityPY/: __init__.py  abstractBuilding.py  buildingFunctions.py  dataset.py  dummy.py  fileUtil.py  gmlUtils.py
PyStadt/: __init__.py  abstractBuilding.py  buildingFunctions.py  cityATB.py  dataset.py  dummy.py
PyStadt/core/input/: citygmlInput.py
PyStadt/core/obejcts/: abstractBuilding.py  building.py  buildingPart.py  fileUtil.py  surfacegml.py
PyStadt/core/output/: citygmlOutput.py
PyStadt/tools/: cityATB.py  partywall.py
PyStadt/util/: envelope.py
cityDPC/core/input/: citygmlInput.py  cityjsonInput.py
cityDPC/core/obejct/: abstractBuilding.py  address.py  geometry.py  surfacegml.py
cityDPC/core/output/: cityjsonOutput.py
cityDPC/tools/: cityBIT.py  cityGTV.py
cityDPC/util/: cityBITutil.py  citygmlClasses.py  coordinateOperations.py
citydpc/: __init__.py  config.py  dataset.py  logger.py
citydpc/core/input/: __init__.py  citygmlInput.py  cityjsonInput.py
citydpc/core/obejct/: abstractBuilding.py  building.py  buildingPart.py  surfacegml.py
citydpc/core/object/: __init__.py  abstractBuilding.py  address.py  building.py  buildingPart.py  exceptions.py  geometry.py  surfacegml.py
citydpc/core/output/: citygmlOutput.py  cityjsonOutput.py
citydpc/tools/: __init__.py  cityATB.py  cityBIT.py  cityGTV.py  datasetToDataFrame.py  partywall.py
citydpc/util/: cityBITutil.py  citydpcWarnings.py  envelope.py
examples/: buildingCreation.py  buildingCreationFromOSM.ipynb  cityBitExample.py  cityJsonExample.py  cityJsonTest.py  crs_tranformation.py  getDataFrame.py  getting_started.py  osmExample.py  party_wall.py  readme.md  selectionAndEnrichment.ipynb
examples/files/: EssenExample.gml
pyStadt/: __init__.py  dataset.py  logger.py
pyStadt/core/input/: citygmlInput.py  cityjsonInput.py
pyStadt/core/obejcts/: abstractBuilding.py  address.py  building.py  buildingPart.py  fileUtil.py  geometry.py  surfacegml.py
pyStadt/core/output/: citygmlOutput.py  cityjsonOutput.py
pyStadt/tools/: cityATB.py  cityBIT.py  cityGTV.py  partywall.py
pyStadt/util/: cityBITutil.py  citygmlClasses.py  envelope.py
src/CityPY/: abstractBuilding.py  buildingFunctions.py  dataset.py  dummy.py  surfacegml.py  vectorFunctions.py
