[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyStadt"
version = "0.0.1"
authors = [
  { name="Simon Raming", email="simon.raming@rwth-aachen.de" },
]
description = "A python package for working with CityGML and CityJSON files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.e3d.rwth-aachen.de/e3d-software-tools/citypythonclass"
"Bug Tracker" = "https://gitlab.e3d.rwth-aachen.de/e3d-software-tools/citypythonclass/issues"