[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citydpc"
version = "0.0.1"
authors = [
  { name="Maxim Shamovich", email="shamovich@e3d.rwth-aachen.de" },
  { name="Simon Raming", email="simon.raming@rwth-aachen.de" },
]
description = "A python package for working with CityGML and CityJSON files"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "License.md", content-type = "text/markdown" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml",
    "numpy",
    "scipy",
    "shapely",
    "pyproj",
    "matplotlib",
    "pandas",
]

[project.urls]
"Homepage" = "https://gitlab.e3d.rwth-aachen.de/e3d-software-tools/citypythonclass"
"Bug Tracker" = "https://gitlab.e3d.rwth-aachen.de/e3d-software-tools/citypythonclass/issues"