[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citydpc"
version = "0.1.21"
authors = [
  { name="Maxim Shamovich", email="shamovich@e3d.rwth-aachen.de" },
  { name="Simon Raming", email="simon.raming@rwth-aachen.de" },
]
description = "A python package for working with CityGML and CityJSON files"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "License.md", content-type = "text/markdown" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml",
    "numpy",
    "scipy",
    "shapely",
    "pyproj",
    "matplotlib",
    "pandas",
]

[project.urls]
"Homepage" = "https://github.com/RWTH-E3D/CityDPC"
"Bug Tracker" = "https://github.com/RWTH-E3D/CityDPC/issues"